[gd_scene load_steps=3 format=3 uid="uid://nhb5hweq2yl7"]

[ext_resource type="Script" path="res://save_menu.gd" id="1_oaeb2"]
[ext_resource type="Texture2D" uid="uid://oj5s0xes1ums" path="res://assets/visual/misc/text_background_ninepatch.png" id="2_4gp7j"]

[node name="save_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oaeb2")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4gp7j")
patch_margin_left = 7
patch_margin_top = 9
patch_margin_right = 8
patch_margin_bottom = 7

[node name="display_message" type="Label" parent="NinePatchRect"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_top = 311.0
offset_right = 70.0
offset_bottom = 349.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1

[node name="message_timer" type="Timer" parent="NinePatchRect/display_message"]

[node name="Label" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_top = 6.0
offset_right = 70.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Save / Load"
horizontal_alignment = 1
vertical_alignment = 1

[node name="code" type="HBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -148.0
offset_right = 102.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Paste" type="Button" parent="NinePatchRect/code"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Paste"

[node name="Copy" type="Button" parent="NinePatchRect/code"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Copy"

[node name="save-load" type="HBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = 48.0
offset_right = 102.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Load" type="Button" parent="NinePatchRect/save-load"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Load"

[node name="Save" type="Button" parent="NinePatchRect/save-load"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Save"

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect"]
self_modulate = Color(0.709804, 0.709804, 0.709804, 1)
custom_minimum_size = Vector2(450, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -78.0
offset_right = 225.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4gp7j")
patch_margin_left = 7
patch_margin_top = 9
patch_margin_right = 8
patch_margin_bottom = 6

[node name="save_code" type="Label" parent="NinePatchRect/NinePatchRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -45.5
offset_right = 219.0
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.541176, 0.541176, 0.541176, 1)
theme_override_font_sizes/font_size = 14
text = "....."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="TextEdit" type="TextEdit" parent="NinePatchRect/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -217.5
offset_top = -45.5
offset_right = 217.5
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "....."
wrap_mode = 1
autowrap_mode = 1

[node name="Back" type="Button" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = 161.0
offset_right = 22.5
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[connection signal="timeout" from="NinePatchRect/display_message/message_timer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="NinePatchRect/code/Paste" to="." method="_on_paste_pressed"]
[connection signal="pressed" from="NinePatchRect/code/Copy" to="." method="_on_copy_pressed"]
[connection signal="pressed" from="NinePatchRect/save-load/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="NinePatchRect/save-load/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="NinePatchRect/Back" to="." method="_on_back_pressed"]
